; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_buf_sub.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_buf_sub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i32, i32* } @buf_sub(%struct.buffer* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.buffer, align 8
  %5 = alloca %struct.buffer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.buffer* %0, %struct.buffer** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = bitcast %struct.buffer* %4 to { i32, i32* }*
  %10 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %9, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @CLEAR(i32 %11, i32* %13)
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load %struct.buffer*, %struct.buffer** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32* @buf_prepend(%struct.buffer* %18, i32 %19)
  br label %25

21:                                               ; preds = %3
  %22 = load %struct.buffer*, %struct.buffer** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32* @buf_write_alloc(%struct.buffer* %22, i32 %23)
  br label %25

25:                                               ; preds = %21, %17
  %26 = phi i32* [ %20, %17 ], [ %24, %21 ]
  store i32* %26, i32** %8, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %34

29:                                               ; preds = %25
  %30 = load i32, i32* %6, align 4
  %31 = getelementptr inbounds %struct.buffer, %struct.buffer* %4, i32 0, i32 0
  store i32 %30, i32* %31, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = getelementptr inbounds %struct.buffer, %struct.buffer* %4, i32 0, i32 1
  store i32* %32, i32** %33, align 8
  br label %34

34:                                               ; preds = %29, %25
  %35 = bitcast %struct.buffer* %4 to { i32, i32* }*
  %36 = load { i32, i32* }, { i32, i32* }* %35, align 8
  ret { i32, i32* } %36
}

declare dso_local i32 @CLEAR(i32, i32*) #1

declare dso_local i32* @buf_prepend(%struct.buffer*, i32) #1

declare dso_local i32* @buf_write_alloc(%struct.buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
